tests/error/hashes1.c
// fail "Expected a formal argument after '#' in macro replacement list for 'a'."
#define a q #
